feat(perf): more perf hacks

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,8 @@
 <!-- Copyright 2015 by Fabien Raynaud -->
-<!doctype html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html ng-app="pds">
   <head>
-    <meta charset="utf-8">
-    <title>pds</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <title>Performance Demo Site</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
